samples/_failures_safe/1761070796_5b5493_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e82f27ae.c: In function ‘main’:
./samples/SAFE/__tmp_e82f27ae.c:153:16: error: missing terminating " character
  153 |         printf("Size mismatch: original
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e82f27ae.c:153:9: error: expected expression at end of input
  153 |         printf("Size mismatch: original
      |         ^~~~~~
./samples/SAFE/__tmp_e82f27ae.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e82f27ae.c:153:9: error: expected declaration or statement at end of input
